--- a/web/css/tilleytap.css
+++ b/web/css/tilleytap.css
@@ -1,1 +1,128 @@
-test
+@font-face {
+  font-family: logoFont;
+  src: url(jamoerFont.otf);
+  font-weight: 200;
+}
+
+body { 
+  padding-top: 70px; 
+}
+
+a {
+  text-decoration: none !important;
+}
+
+p .logoFont {
+  font-size: 15px;
+  vertical-align: sub;
+}
+
+.upsize {
+  font-size: 13px;
+}
+
+#bgCanvas {
+  width: 100%;
+  height: 50px;
+}
+
+#logo {
+  top: 0px;
+  font-size: 35px;
+  margin: 7px 0 0 20px;
+}
+
+#logo a {
+  color: #ffffff !important;
+}
+#
+logo a:hover {
+  color: #ffffff !important;
+}
+
+#logo img {
+  height: 30px;
+  margin-right: 20px;
+  top: 20px;
+  vertical-align: inherit;
+}
+
+#content {
+  text-align: center;
+}
+
+#content .panel-heading {
+  text-align: left;
+}
+
+.logoFont {
+  font-family: logoFont;
+}
+
+.float {
+  display: inline-block;
+}
+
+.panel {
+  margin: 20px;
+}
+
+.panel-body h1 {
+  margin-top: 0px;
+}
+
+.panelHeader {
+  font-size: 30px;
+}
+
+.panelBodyHeader {
+  font-size: 50px;
+}
+
+.fa:hover {
+  color: #2a6496;
+}
+
+#pints img {
+  height: 20px;
+  margin: 2px;
+}
+
+.navbar a:hover {
+  opacity: .8;
+}
+
+.navbar-header, .navbar-collapse {
+  position: fixed;
+  top: 0px;
+}
+
+#percent-circle svg {
+  height: 165px;
+}
+
+#percent-circle text {
+  font-weight: 700;
+}
+
+#infoContent h3 {
+  color: #999;
+}
+
+#scaleImg {
+  padding:25px;
+}
+
+@media only screen
+and (min-width: 721px) {
+  .float img {
+    height: 75px;
+  }
+}
+     
+@media only screen
+and (max-width: 720px) {
+  .float img {
+    height: 50px;
+  }
+}
