--- a/web/templates/welcome.html
+++ b/web/templates/welcome.html
@@ -1,1 +1,14 @@
-test
+<div class="col-xs-12 col-md-4"> 
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <div class="panelHeader logoFont">Welcome...</div>
+    </div>
+    <div class="panel-body">
+      <p><span class="logoFont upsize">TIlleYtAp</span> is an integrated smart scale that measures the remaining content of a keg, handbuilt for use with my personal home kegerator. The data gathered from this scale is pushed to the cloud every 60 seconds, so you know not only what&#39;s on tap but also exactly how much is left. Stay connected to keep up to date with all of the local Indiana breweries that I have the pleasure of serving right from my home. Check out the additional links below which contain all of the details that make this site possible.</p>
+      <div class="col-xs-3"><a href="https://www.twitter.com/TilleyTap" target="_blank"><i class="fa fa-twitter fa-2x" aria-hidden="true"></i></a></div>
+      <div class="col-xs-3"><a href="mailto:david@tilleytap.com"><i class="fa fa-envelope fa-2x" aria-hidden="true"></i></a></div>
+      <div class="col-xs-3"><a href="http://www.tilleytap.com/about"><i class="fa fa-info-circle fa-2x" aria-hidden="true"></i></a></div>
+      <div class="col-xs-3"><a href="https://www.github.com/d-tilley/tilleytap" target="_blank"><i class="fa fa-github fa-2x" aria-hidden="true"></i></a></div>
+    </div>
+  </div>
+</div>
